(Part-1)Changes for Fetching only Municipality Employees in search for Internal Message New files added - [GetMunicipalityEmployeesResponse.java] Files modified - [MunicipalityUsers.variables.json,Cx2QueryExecutorServiceImpl.java,MunicipalityUsers.html,cx2-queries.hbm.xml,QueryExecutionController.java,MunicipalityUsers.js,Forms.variables.json,cx2_query.json,Forms.html,Cx2QueryExecutorService.java]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -873,6 +873,13 @@
                                 datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="true" width="100%" orderby="fullName:asc"></wm-search>
                             </wm-container>
                         </wm-composite>
+                        <wm-composite name="composite7">
+                            <wm-label class="col-md-3 form-control-static" caption="User Search" width="20%" fontweight="bold" name="label100"></wm-label>
+                            <wm-container class="col-md-9" width="80%" name="container14">
+                                <wm-search placeholder="Search by Name or Email Address" dataset="bind:Variables.svGetMunicipalityEmployees.dataSet" displaylabel="col0.active" datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)"
+                                required="true" width="100%" name="textSearchInternalPeople" type="search"></wm-search>
+                            </wm-container>
+                        </wm-composite>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="3" name="gridcolumn24" horizontalalign="left">
                         <wm-button class="btn-primary" caption="Add Tag" type="button" margin="unset 0.5em" name="ButtonTagPeople" iconclass="wi wi-plus" on-click="ButtonTagPeopleClick($event, $scope)" horizontalalign="left" disabled="bind:!Widgets.textSearchPeople.datavalue"></wm-button>
